Adding more cards per row.

--- a/src/components/PostCard/index.html
+++ b/src/components/PostCard/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="../../styles/main.css">
 	</head>
 	<!-- <body class="bg-gray-100 min-h-screen items-center justify-center flex antialiased text-gray-900"> -->
-		<div class='flex-row bg-gray-100 pt-3 rounded-lg' style="width: 250px;">
+		<div class='flex-row bg-gray-100 pt-3 rounded-lg hover:shadow-2xl cursor-pointer' style="width: 250px;">
 			<div class="rounded-lg container mx-auto" style="height: 300px; width: 144px; background-size: contain; background-image: url('../../../public/iPhoneXWireframe.png');">
 				<!-- <img class='hover rounded shadow-xl h-auto' src="../../../public/iPhoneXWireframe.png"> -->
 				<img class='hover rounded shadow-xl h-full mx-auto' src="../../../public/newsScreenshot.png">					
