React-ified the interface for the navbar.

--- a/src/components/PostCard/index.html
+++ b/src/components/PostCard/index.html
@@ -10,6 +10,7 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../../styles/main.css">
+		<link rel="stylesheet" href="../../styles/icons.css">
 	</head>
 	<!-- <body class="bg-gray-100 min-h-screen items-center justify-center flex antialiased text-gray-900"> -->
 		<div class='flex-row bg-gray-100 pt-3 rounded-lg hover:shadow-2xl cursor-pointer' style="width: 250px;">
